[package]
name = "inpx"
authors = ["Amr junulkhoro23@gmail.com"]
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"
description = "A library for easier input"
repository = "https://github.com/Ragh-ragh-ragh-ragh/inpx"
license = "Apache-2.0"
exclude = [ "/token", "/src/doc" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
