[package]
name = "inpx"
authors = ["Amr junulkhoro23@gmail.com"]
version = "0.1.3"
edition = "2022"
rust-version = "1.65.0"
description = "A library for easier input"
repository = "https://github.com/Ragh-ragh-ragh-ragh/inpx"
license = "Apache-2.0"
exclude = [ "/token", "/src/doc", "/.gitignore" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
